syntax = "proto3";

package publish.service.v1;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "validate/validate.proto";

option go_package = "github.com/toomanysource/atreus/api/publish/service/v1;v1";

// PublishService 处理Publish相关的请求
service PublishService {
	// 获取用户投稿视频列表
	rpc GetPublishList(PublishListRequest) returns (PublishListReply) {
		option (google.api.http) = {
			get: "/douyin/publish/list"
		};
	}
	// 用户上传视频
	rpc PublishAction(PublishActionRequest) returns (PublishActionReply) {
		option (google.api.http) = {
			post: "/douyin/publish/action"
			body: "*"
		};
	}

	// feed服务请求根据最新投稿时间及需求数量获取视频列表
	rpc GetVideoList(VideoListRequest) returns (VideoListReply) {}
	// favorite相关服务请求根据视频id列表获取视频列表
	rpc GetVideoListByVideoIds(VideoListByVideoIdsRequest) returns (VideoListReply) {}
	// relation相关服务请求更新某一视频点赞数量
	rpc UpdateFavorite(UpdateFavoriteCountRequest) returns (google.protobuf.Empty) {}
}

// 视频信息
message Video {
	// 视频唯一标识
	uint32 id = 1 [json_name = "id"];
	// 视频作者信息
	User author = 2 [json_name = "author"];
	// 视频播放地址
	string play_url = 3 [json_name = "play_url"];
	// 视频封面地址
	string cover_url = 4 [json_name = "cover_url"];
	// 视频的点赞总数
	uint32 favorite_count = 5 [json_name = "favorite_count"];
	// 视频的评论总数
	uint32 comment_count = 6 [json_name = "comment_count"];
	// true-已点赞，false-未点赞
	bool is_favorite = 7 [json_name = "is_favorite"];
	// 视频标题
	string title = 8 [json_name = "title"];
}

// 用户信息
message User {
	// 用户id
	uint32 id = 1 [json_name = "id"];
	// 用户名称
	string name = 2 [json_name = "name"];
	// 关注总数
	uint32 follow_count = 3 [json_name = "follow_count"];
	// 粉丝总数
	uint32 follower_count = 4 [json_name = "follower_count"];
	// 是否关注
	bool is_follow = 5 [json_name = "is_follow"];
	// 用户头像
	string avatar = 6 [json_name = "avatar"];
	// 用户页面背景图
	string background_image = 7 [json_name = "background_image"];
	// 个人简介
	string signature = 8 [json_name = "signature"];
	// 获赞数量
	uint32 total_favorited = 9 [json_name = "total_favorited"];
	// 作品数量
	uint32 work_count = 10 [json_name = "work_count"];
	// 点赞数量
	uint32 favorite_count = 11 [json_name = "favorite_count"];
}

message VideoListRequest {
	// 最新视频时间戳
	string latest_time = 1;
	// 用户id
	uint32 user_id = 2;
	// 视频数量
	uint32 number = 3;
}

message VideoListReply {
	// 下次请求的时间戳
	int64 next_time = 1;
	// 视频列表
	repeated Video video_list = 2;
}

message VideoListByVideoIdsRequest {
	// 登陆用户id
	uint32 user_id = 2;
	// 视频id列表
	repeated uint32 video_ids = 1;
}

message UpdateFavoriteCountRequest {
	// 视频id
	uint32 video_id = 1;
	// 关注数变化值
	int32 favorite_change = 2;
}

message PublishActionRequest {
	// 用户鉴权token
	string token = 1 [(validate.rules).string.min_len = 1];
	// 视频数据
	bytes data = 2;
	// 视频标题
	string title = 3;
}

message PublishActionReply {
	// 状态码，0-成功，其他值-失败
	int32 status_code = 1 [json_name = "status_code"];
	// 返回状态描述
	string status_msg = 2 [json_name = "status_msg"];
}

message PublishListRequest {
	// 用户id
	uint32 user_id = 1;
	// 用户鉴权token
	string token = 2;
}

message PublishListReply {
	// 状态码，0-成功，其他值-失败
	int32 status_code = 1 [json_name = "status_code"];
	// 返回状态描述
	string status_msg = 2 [json_name = "status_msg"];
	// 用户发布视频列表
	repeated Video video_list = 3 [json_name = "video_list"];
}
